# voxelshop

./: .gitignore  .travis.yml  README.md  _config.yml  build.xml  front end  index.html  index.md  pack.xml  params.json  pom.xml
MapGeneration/result/:  result.dae   result_file.dae
MapGeneration/src/com/canny/: CannyEdgeDetector.java  EdgeDetection.java
MapGeneration/src/com/vitco/: Main.java
PS3k 2.0/src/spring/: config.xml
PS3k 2.0/src/vitco/: Main.java
PS3k 2.0/src/vitco/data/: AnimationLineInterface.java  PixelInterface.java  World.java  WorldInterface.java
PS4k/: .gitignore  pom.xml
PS4k/VoxelShop_jetpdb/: VoxelShop.env
PS4k/data/: current.layout
PS4k/resource/bundle/: LangBundle.properties
PS4k/resource/layout/: TopLayout.ilayout  custom.xml  layout.xml
PS4k/settings/: current.layout  pref-002.ser  pref.ser
PS4k/src/: UserInputDialogTest.java
PS4k/src/com/vitco/: ImportTester.java  Main.java  Test.java  TextureTest.java
PS4k/src/com/vitco/core/: CCamera.java  (+4 more)
PS4k/src/main/java/: log4j.properties
SpriteToTex/src/com/vitco/: Main.java
Testing/RTreeTest/: EventCenter.as  MovieClipEvent.as  Plank.as  PlankManager.as  PositionEvent.as  RTree.as  Tile.as  main.as  runandjump.fla  runandjump.swf
Tools/HxDen/: HxD.ini  changelog.txt  license.txt  readme.txt
Tools/jide_designer/: Readme.txt
_data/: topnav.yml
_data/sidebars/: home_sidebar.yml  voxelshop_sidebar.yml
_includes/custom/: sidebarconfigs.html
_posts/: 2016-11-05-new-voxelshop-site.md
docs/: index.html
encode_map_fo1/src/vitco/cluster/: Tile.java  TileCluster.java  TileClusterManager.java
encode_map_fo1/src/vitco/datastruct/: Tile.java
encode_map_fo1/src/vitco/group/: GroupRep.java  TileRep.java  TileTools.java
encode_map_fo1/src/vitco/helper/: ColorPal.java  LogFile.java  TmxMapReader.java  WorldGenerator.java  XmlLinkageReader.java
encode_map_fo1/src/vitco/main/: Config.java  Main.java
encode_map_fo1/src/vitco/tools/: BiMap.java  FileTools.java  HexTools.java  ImgTools.java  MathTools.java  MySQLConnection.java  Out.java  Zip.java
foc/: focm.mkb
foc-fw/: .actionScriptProperties  .project
foc-fw/src/: FantasyFB.as
foc-fw/src/com/pixelatedgames/: Game.as  Renderer.as
foc-jd/src/: Main.java  Window.java
foc/PolyVox/: CMakeLists.txt  Doxyfile.in  Mainpage.dox  polyvox.mkf  polyvox_create_mks.py
foc/PolyVox/PolyVoxCore/: CMakeLists.txt
foc/PolyVox/PolyVoxCore/include/PolyVoxCore/: AStarPathfinder.h  AStarPathfinder.inl  AmbientOcclusionCalculator.h  AmbientOcclusionCalculator.inl  Array.h  Array.inl  ArraySizes.h  BaseVolume.h  BaseVolume.inl  BaseVolumeSampler.inl  ConstVolumeProxy.h  CubicSurfaceExtractor.h  CubicSurfaceExtractor.inl  CubicSurfaceExtractorWithNormals.h  CubicSurfaceExtractorWithNormals.inl  DefaultIsQuadNeeded.h  DefaultMarchingCubesController.h  Density.h  GradientEstimators.h  GradientEstimators.inl  IteratorController.h  IteratorController.inl  LargeVolume.h  LargeVolume.inl  LargeVolumeSampler.inl  Log.h  LowPassFilter.h  LowPassFilter.inl  MarchingCubesSurfaceExtractor.h  MarchingCubesSurfaceExtractor.inl  Material.h  MaterialDensityPair.h  MeshDecimator.h  MeshDecimator.inl  PolyVoxForwardDeclarations.h  RawVolume.h  RawVolume.inl  RawVolumeSampler.inl  Raycast.h  Raycast.inl  (+16 more)
foc/PolyVox/PolyVoxCore/include/PolyVoxImpl/: AStarPathfinderImpl.h  ArraySizesImpl.h  ArraySizesImpl.inl  Block.h  Block.inl  MarchingCubesTables.h  RandomUnitVectors.h  RandomVectors.h  SubArray.h  SubArray.inl  TypeDef.h  Utility.h
foc/PolyVox/PolyVoxCore/source/: AStarPathfinder.cpp  ArraySizes.cpp  GradientEstimators.cpp  Log.cpp  MeshDecimator.cpp  Region.cpp  SimpleInterface.cpp  VertexTypes.cpp  VoxelFilters.cpp
foc/PolyVox/PolyVoxCore/source/PolyVoxImpl/: MarchingCubesTables.cpp  RandomUnitVectors.cpp  RandomVectors.cpp  Utility.cpp
foc/PolyVox/PolyVoxUtil/: CMakeLists.txt
foc/PolyVox/PolyVoxUtil/include/PolyVoxUtil/: Serialization.h  Serialization.inl  VolumeChangeTracker.h  VolumeChangeTracker.inl
foc/PolyVox/PolyVoxUtil/source/: Dummy.cpp
foc/PolyVox/bindings/: CMakeLists.txt  CubicSurfaceExtractor.i  CubicSurfaceExtractorWithNormals.i  Density.i  MarchingCubesSurfaceExtractor.i  Material.i  MaterialDensityPair.i  PolyVoxCore.i  Region.i  SimpleVolume.i  SurfaceMesh.i  Vector.i  VertexTypes.i
foc/boost/: boost.mkf
foc/boost/boost/: boost.mkf
foc/data/: development.icf  image.tga  main_menu.group  resource_templates.itx
foc/data/iwui_style/: iwui_propertysets.itx  iwui_softkeyboard.ui  iwui_style.group
foc/data/iwui_style/fonts/: iwui_fonts.group
foc/data/iwui_style/textures/: iwui_textures.group
foc/data/main_menu/: login.ui  new_game.ui  new_or_load.ui
foc/google/: config.h  google.mkf
foc/google/protobuf/stubs/: common.cpp  hash.h
foc/icfs/: focm.icf
foc/src/game/: game.cpp  game.h
foc/src/game/states/: auth_state.h  connected_state.h  connecting_state.h  game_connected_state.h  game_connecting_state.h  game_disconnected_state.h  init_state.h  login_auth_state.h  login_connected_state.h  login_connecting_state.h  login_disconnected_state.h  server_init_state.h
foc/src/main/: main.cpp
foc/src/network/: fantasy_messages.pb.cpp  fantasy_messages.pb.h  fo_msgs.pb.cpp  fo_msgs.pb.h  fos_socket.cpp  fos_socket.h
foc/src/ui/: menu_handlers.cpp  menu_handlers.h
foc/src/utils/: ssm.cpp  ssm.h  ui.cpp  ui.h
fos/src/com/pixelatedgames/: Main.java
pages/voxelshop/: voxelshop_animation.md  voxelshop_colors.md  voxelshop_export.md  voxelshop_frames.md  voxelshop_import.md  voxelshop_shortcuts.md  voxelshop_tools.md  voxelshop_tutorials.md
proto/: README  fantasy_compile.py  fantasy_messages.proto  fo_msgs.proto  fo_msgs_compile.py  gen_compile.py  gen_msgs.proto  old_pcompile.txt  pcompile.bat  pcompile.py  protoc-gen-as3  protoc-gen-as3.bat
proto/compiler/: options.proto  pcompile.py
resource/bundle/: LangBundle.properties  LangBundle_de_DE.properties  LangBundle_zh_CN.properties
static/: install-linux.sh  install.txt  uninstall-linux.sh
static/share/applications/: com.blackflux.voxelshop.desktop
(+1231 files in other folders)
